--- a/bower.json
+++ b/bower.json
@@ -76,13 +76,15 @@
     "themify-icons": "~0.1.0",
     "flag-icon-css": "~0.8.5",
     "bootstrap-rtl": "~3.3.4",
-    "ng-morphing-modal": "*"
+    "ng-morphing-modal": "*",
+    "angular-permission": "^4.0.6",
+    "angular-modal-service": "^0.10.1"
   },
   "resolutions": {
     "jquery": "~2.1.3",
     "fastclick": "~1.0.6",
     "moment": ">=2.9.0",
     "bootstrap": "~3.3.6",
-    "angular": "~1.5.7"
+    "angular": "1.5.7"
   }
 }
