--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "~4.9.8",
-    "body-parser": "1.13.1"
+    "angular-permission": "^4.0.6",
+    "angular-route": "^1.5.8",
+    "angular-ui-router": "^0.3.1",
+    "body-parser": "1.13.1",
+    "express": "~4.9.8"
   },
   "devDependencies": {
     "dotenv": "^2.0.0",
